--- a/src/public/index.html
+++ b/src/public/index.html
@@ -8,8 +8,6 @@
     <link href="styles.css" rel="stylesheet">
     <script src="https://unpkg.com/htmx.org@2.0.1"></script>
 </head>
-
-
 <body class="bg-gray-100 text-gray-900 font-sans">
 <div class="container mx-auto py-8">
     <div class="bg-gray-200 p-6 rounded-lg mb-8 text-center">
@@ -47,7 +45,7 @@
                            newTab.setAttribute('aria-selected', 'true')
                            newTab.classList.add('selected')">
         <button role="tab" aria-controls="tab-contents" aria-selected="true" hx-get="/tab-podcast-list"
-                class="px-4 py-2 font-semibold text-black bg-gray-200 rounded-t-md focus:outline-none">Podcasts
+                class="px-4 py-2 font-semibold text-black bg-gray-200 rounded-t-md focus:outline-none selected">Podcasts
         </button>
         <button role="tab" aria-controls="tab-contents" aria-selected="false" hx-get="/tab-about"
                 class="px-4 py-2 font-semibold text-black bg-gray-200 rounded-t-md focus:outline-none">
